--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -151,7 +151,7 @@
 
 		  {% if site.url-pretty %}
 		  &nbsp;&bull;&nbsp;
-		  <a href="{{ site.url }}">{{ site.url-pretty }}</a>
+		  <a href="{{ site.website-url }}">{{ site.url-pretty }}</a>
 		  {% endif %}
 	    </p>
 	        <!-- Please don't remove this, keep my open source work credited :) -->
