--- a/css/main.css
+++ b/css/main.css
@@ -23,10 +23,11 @@ h1,h2,h3,h4,h5,h6 {
 }
 a {
   color: #008AFF;
+  cursor: pointer;
 }
 a:hover,
 a:focus {
-  color: #0085a1;
+  color: #e68236;
 }
 blockquote {
   color: #808080;
@@ -64,12 +65,14 @@ hr.small {
 ::-moz-selection {
   color: white;
   text-shadow: none;
-  background: #0085a1;
+  background: #e68236;
+  cursor: pointer;
 }
 ::selection {
   color: white;
   text-shadow: none;
-  background: #0085a1;
+  background: #e68236;
+  cursor: pointer;
 }
 img::selection {
   color: white;
@@ -97,7 +100,7 @@ img {
 /* --- Navbar --- */
 
 .navbar-custom {
-  background: #F5F5F5;
+  background: #e68236;
   border-bottom: 1px solid #EAEAEA;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
@@ -106,19 +109,21 @@ img {
   text-transform: uppercase;
   font-size: 12px;
   letter-spacing: 1px;
+  cursor: pointer;
 }
 
 .navbar-custom .navbar-brand,
 .navbar-custom .nav li a {
-  font-weight: 800;
-  color: #404040;
+  font-weight: 600;
+  color: #FFFFFF;
+  cursor: pointer;
 }
 
 .navbar-custom .navbar-brand:hover,
 .navbar-custom .navbar-brand:focus ,
 .navbar-custom .nav li a:hover,
 .navbar-custom .nav li a:focus {
-  color: #0085a1;
+  color: #000000;
 }
 
 @media only screen and (min-width: 768px) {
@@ -172,14 +177,14 @@ img {
     width: 100px;
     margin-top: -50px;
   }
-  
+
   .navbar-custom .avatar-container  .avatar-img-border {
     width: 100%;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
     -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
     -moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
   }
-  
+
   .navbar-custom .avatar-container  .avatar-img {
     width: 100%;
   }
@@ -217,7 +222,7 @@ img {
 @media only screen and (min-width: 768px) {
   .navbar-custom .nav .navlinks-container {
     text-align: center;
-  }  
+  }
   .navbar-custom .nav .navlinks-container:hover {
     background: #eee;
   }
@@ -273,7 +278,7 @@ footer .theme-by {
     font-size: 16px;
   }
 }
- 
+
 /* --- Post preview --- */
 
 .post-preview {
@@ -294,12 +299,13 @@ footer .theme-by {
 .post-preview a {
   text-decoration: none;
   color: #404040;
+  cursor: pointer;
 }
 
 .post-preview a:focus,
 .post-preview a:hover {
   text-decoration: none;
-  color: #0085a1;
+  color: #e68236;
 }
 
 .post-preview .post-title {
@@ -450,11 +456,11 @@ footer .theme-by {
   }
   .intro-header.big-img {
     margin-top: 91px;  /* Full navbar is small navbar + 20px padding on each side when expanded */
-  }	
+  }
   .intro-header.big-img .page-heading,
   .intro-header.big-img .post-heading  {
     padding: 150px 0;
-  }  
+  }
   .intro-header .page-heading h1 {
     font-size: 80px;
   }
@@ -491,9 +497,9 @@ footer .theme-by {
   }
   .header-section.has-img .big-img {
     margin-bottom: 0;
-  }  
-} 
-@media only screen and (max-width: 325px) { 
+  }
+}
+@media only screen and (max-width: 325px) {
   .intro-header.big-img {
     height: 200px;
   }
@@ -522,6 +528,7 @@ footer .theme-by {
   background: #FFF;
   border-radius: 0;
   color: #404040;
+  cursor: pointer;
 }
 @media only screen and (min-width: 768px) {
   .pager li a {
@@ -531,8 +538,8 @@ footer .theme-by {
 .pager li a:hover,
 .pager li a:focus {
   color: #FFF;
-  background: #0085a1;
-  border: 1px solid #0085a1;
+  background: #e68236;
+  border: 1px solid #e68236;
 }
 
 .pager {
@@ -625,4 +632,8 @@ td.gutter {
 
 #social-share-section {
   margin-bottom: 30px;
+}
+
+.flake {
+  color: #e68236;
 }
